# aoc2018

./: aoc2018.cabal  stack.yaml
src/: Day1.hs  Day2.hs  Main.hs
